Fix minor css aligning problems in DaliBox :bug:

--- a/_editor/components/canvas/dali_box/_daliBox.scss
+++ b/_editor/components/canvas/dali_box/_daliBox.scss
@@ -117,6 +117,7 @@
     display: inline-block;
     word-break: break-word;
     border: 1px solid transparent;
+    vertical-align:top;
 
 }
 
